syntax = "proto2";

package basic;

enum Enum {
    ENUM_TWO = 2;
    ENUM_ONE = 1;
    ENUM_ZERO = 0;
}

message BasicTypes {
    optional int32 int32_num = 1 [default = -5];
    optional int64 int64_num = 2;
    optional uint32 uint32_num = 3;
    optional uint64 uint64_num = 4;
    optional sint32 sint32_num = 5;
    optional sint64 sint64_num = 6;
    optional fixed32 fixed32_num = 7;
    optional fixed64 fixed64_num = 8;
    optional sfixed32 sfixed32_num = 9;
    optional sfixed64 sfixed64_num = 10;
    optional bool boolean = 11 [default = false];
    optional float flt = 12 [default = 1.0];
    optional double dbl = 13;
    required Enum enumeration = 14 [default = ENUM_ONE];
}

enum Enum2 {
    ENUM2_UNKNOWN = 0;
}

message EnumMessage {
    optional Enum2 enumeration = 1;
}
